--- a/extension/options.html
+++ b/extension/options.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <meta charset="UTF-8">
   <title>Charcheck Options</title>
   <link rel="stylesheet" href="options.css">
 </head>
