--- a/extension/options.html
+++ b/extension/options.html
@@ -100,8 +100,12 @@
       </div>
     </div>
 
-    <div id="status"></div>
-    <button id="save">Save</button>
+    <div id="status" class="message"></div>
+    <div class="buttons">
+      <button id="save">Save</button>
+      <button id="reset">Reset</button>
+    </div>
+
   </div>
 
   <script src="options.js"></script>
