Add button for select/deselect items

--- a/extension/options.html
+++ b/extension/options.html
@@ -8,6 +8,7 @@
 <body>
   <div class="container">
     <h2>Options:</h2>
+    <input type="checkbox" id="select-all" checked><label for="select-all">全て選択/解除</label>
     <div class="table">
       <div class="row head">
         <div class="cell">検索対象</div>
@@ -103,7 +104,6 @@
     <div id="status" class="message"></div>
     <div class="buttons">
       <button id="save">Save</button>
-      <button id="reset">Reset</button>
     </div>
 
   </div>
