--- a/extension/options.html
+++ b/extension/options.html
@@ -21,7 +21,7 @@
           <label for="item1">半角スペース</label>
         </div>
         <div class="cell">
-          <input type="color" id="color1" class="color" value="#ff6347">
+          <input type="color" id="color1" class="color">
         </div>
         <div class="cell">
           <p class="regexp">/([\t\n\r ]+)([^\t\n\r ])/g</p>
@@ -33,7 +33,7 @@
           <label for="item2">全角スペース</label>
         </div>
         <div class="cell">
-          <input type="color" id="color2" class="color" value="#fff100">
+          <input type="color" id="color2" class="color">
         </div>
         <div class="cell">
           <p class="regexp">/\u3000+/g</p>
@@ -45,7 +45,7 @@
           <label for="item3">全角数字</label>
         </div>
         <div class="cell">
-          <input type="color" id="color3" class="color" value="#ee82ee">
+          <input type="color" id="color3" class="color">
         </div>
         <div class="cell">
           <p class="regexp">/[０-９]+/g</p>
@@ -57,7 +57,7 @@
           <label for="item4">全角英字</label>
         </div>
         <div class="cell">
-          <input type="color" id="color4" class="color" value="#1e90ff">
+          <input type="color" id="color4" class="color">
         </div>
         <div class="cell">
           <p class="regexp">/[Ａ-Ｚａ-ｚ]+/g</p>
@@ -69,7 +69,7 @@
           <label for="item5">約物括弧（全角）</label>
         </div>
         <div class="cell">
-          <input type="color" id="color5" class="color" value="#3cb371">
+          <input type="color" id="color5" class="color">
         </div>
         <div class="cell">
           <p class="regexp">/[〈〉《》「」『』【】〔〕（）［］｛｝]+/g</p>
@@ -81,7 +81,7 @@
           <label for="item6">句読点（全角）</label>
         </div>
         <div class="cell">
-          <input type="color" id="color6" class="color" value="#6a5acd">
+          <input type="color" id="color6" class="color">
         </div>
         <div class="cell">
           <p class="regexp">/[、。！？・：；]+/g</p>
@@ -93,7 +93,7 @@
           <label for="item7">FULLWIDTH COMMA, FULLWIDTH YEN SIGN</label>
         </div>
         <div class="cell">
-          <input type="color" id="color7" class="color" value="#ffa500">
+          <input type="color" id="color7" class="color">
         </div>
         <div class="cell">
           <p class="regexp">/[\uFF0C\uFFE5]+/g</p>
