--- a/extension/options.html
+++ b/extension/options.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Charcheck Options</title>
   <link rel="stylesheet" href="options.css">
+  <link rel="stylesheet" href="charcheck.css">
 </head>
 <body>
   <div class="container">
