Add reset color/same color options

--- a/extension/options.html
+++ b/extension/options.html
@@ -112,7 +112,7 @@
         </dd>
         <dt>カラーパレット:</dt>
         <dd>
-          <p><button type="button">初期値に戻す</button></p>
+          <p><button type="button" id="reset-colors">初期値に戻す</button></p>
           <p><input type="checkbox" id="same-color"><label for="same-color">全て同じ色を使用</label>　<input type="color" id="color-default" value="#ff0000"></p>
         </dd>
       </dl>
