--- a/extension/options.html
+++ b/extension/options.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>Charcheck Options</title>
+  <title>Charcheck 詳細設定</title>
   <link rel="stylesheet" href="options.css">
   <link rel="stylesheet" href="charcheck.css">
 </head>
