Add FULLWIDTH HYPHEN-MINUS to check.

--- a/extension/options.html
+++ b/extension/options.html
@@ -94,13 +94,13 @@
       <div class="row">
         <div class="cell">
           <input type="checkbox" id="item7" class="item" checked>
-          <label for="item7">FULLWIDTH COMMA, FULLWIDTH YEN SIGN</label>
+          <label for="item7">FULLWIDTH COMMA, FULLWIDTH YEN SIGN, FULLWIDTH HYPHEN-MINUS</label>
         </div>
         <div class="cell">
           <input type="color" id="color7" class="color">
         </div>
         <div class="cell">
-          <p class="regexp">/[\uFF0C\uFFE5]+/g</p>
+          <p class="regexp">/[\uFF0C\uFFE5\uFF0D]+/g</p>
         </div>
       </div>
     </div>
