Add previwe text for colors.

--- a/extension/options.html
+++ b/extension/options.html
@@ -104,6 +104,10 @@
         </div>
       </div>
     </div>
+    <div class="preview">
+      <h3>配色のサンプルテキスト</h3>
+      <p class="sample-text">ABCD<span class="__space"> </span><span class="__brackets">「</span>EF<span class="__brackets">」</span><span class="__fw-space">　</span><span class="__punc">・</span>G<span class="__digit">１</span><span class="__alpha">Ａ</span>XY<span class="__fw-char">－</span>Z</p>
+    </div>
 
     <div class="preferences">
       <h2 class="hd">色の調整</h2>
