Add sample text to option page.

--- a/extension/options.html
+++ b/extension/options.html
@@ -106,7 +106,7 @@
     </div>
     <div class="preview">
       <h3>配色のサンプルテキスト</h3>
-      <p class="sample-text">ABCD<span class="__space"> </span><span class="__brackets">「</span>EF<span class="__brackets">」</span><span class="__fw-space">　</span><span class="__punc">・</span>G<span class="__digit">１</span><span class="__alpha">Ａ</span>XY<span class="__fw-char">－</span>Z</p>
+      <p class="sample-text">これは、「ダミー・テキスト」です。 「これはDummy Ｔextです」。 　ABＣD ー １2３4</p>
     </div>
 
     <div class="preferences">
