Fix table layout

--- a/extension/options.html
+++ b/extension/options.html
@@ -10,20 +10,16 @@
   <div class="container">
     <h2 class="hd">検索設定</h2>
     <p class="text">検索対象の文字の種類を選択するには、左側のチェックボックスにチェックを入れてください。</p>
-    <div class="upper-buttons">
-      <input type="checkbox" id="select-all" checked><label for="select-all">全て選択/解除</label>
-    </div>
     <div class="table">
       <div class="row head">
+        <div class="cell"><input type="checkbox" id="select-all" checked></div>
         <div class="cell">検索対象</div>
         <div class="cell">背景色</div>
         <div class="cell">正規表現</div>
       </div>
       <div class="row">
-        <div class="cell">
-          <input type="checkbox" id="item1" class="item" checked>
-          <label for="item1">半角スペース</label>
-        </div>
+        <div class="cell"><input type="checkbox" id="item1" class="item" checked></div>
+        <div class="cell"><label for="item1">半角スペース</label></div>
         <div class="cell">
           <input type="color" id="color1" class="color">
         </div>
@@ -32,10 +28,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="cell">
-          <input type="checkbox" id="item2" class="item" checked>
-          <label for="item2">全角スペース</label>
-        </div>
+        <div class="cell"><input type="checkbox" id="item2" class="item" checked></div>
+        <div class="cell"><label for="item2">全角スペース</label></div>
         <div class="cell">
           <input type="color" id="color2" class="color">
         </div>
@@ -44,10 +38,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="cell">
-          <input type="checkbox" id="item3" class="item" checked>
-          <label for="item3">全角数字</label>
-        </div>
+        <div class="cell"><input type="checkbox" id="item3" class="item" checked></div>
+        <div class="cell"><label for="item3">全角数字</label></div>
         <div class="cell">
           <input type="color" id="color3" class="color">
         </div>
@@ -56,10 +48,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="cell">
-          <input type="checkbox" id="item4" class="item" checked>
-          <label for="item4">全角英字</label>
-        </div>
+        <div class="cell"><input type="checkbox" id="item4" class="item" checked></div>
+        <div class="cell"><label for="item4">全角英字</label></div>
         <div class="cell">
           <input type="color" id="color4" class="color">
         </div>
@@ -68,10 +58,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="cell">
-          <input type="checkbox" id="item5" class="item" checked>
-          <label for="item5">約物括弧（全角）</label>
-        </div>
+        <div class="cell"><input type="checkbox" id="item5" class="item" checked></div>
+        <div class="cell"><label for="item5">約物括弧（全角）</label></div>
         <div class="cell">
           <input type="color" id="color5" class="color">
         </div>
@@ -80,10 +68,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="cell">
-          <input type="checkbox" id="item6" class="item" checked>
-          <label for="item6">句読点（全角）</label>
-        </div>
+        <div class="cell"><input type="checkbox" id="item6" class="item" checked></div>
+        <div class="cell"><label for="item6">句読点（全角）</label></div>
         <div class="cell">
           <input type="color" id="color6" class="color">
         </div>
@@ -92,8 +78,8 @@
         </div>
       </div>
       <div class="row">
+        <div class="cell"><input type="checkbox" id="item7" class="item" checked></div>
         <div class="cell">
-          <input type="checkbox" id="item7" class="item" checked>
           <label for="item7">FULLWIDTH COMMA, FULLWIDTH YEN SIGN, FULLWIDTH HYPHEN-MINUS</label>
         </div>
         <div class="cell">
