Fix select-all, preview text.

--- a/extension/options.html
+++ b/extension/options.html
@@ -92,7 +92,7 @@
     </div>
     <div class="preview">
       <h3>配色のサンプルテキスト</h3>
-      <p class="sample-text">これは、「ダミー・テキスト」です。 「これはDummy Ｔextです」。 　ABＣD ー １2３4</p>
+      <p class="sample-text">これは、「ダミー・テキスト」です。 「これはDummy Ｔextです」。 　ABＣD ー １2－３4</p>
     </div>
 
     <div class="preferences">
